# dbt-subprocess-plugin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/dbt_subprocess_plugin/: __init__.py
tests/: profiles.yml  test_plugin.py
